# gcptr

./: COPYING  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
debian/: changelog  control  copyright  gcptr.manpages  rules
man/: Makefile.am  gcptr.1
src/: Makefile.am  main.c  main.h
